--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,9 +36,12 @@ services:
     restart: on-failure
   learner-record-service:
     environment:
-      XAPI_AUTHORISATION: NjZmMmI0ZmMwMDFlM2RhOTkyZDIzYjU3ZDhhNzQ1NzY1NWJlYTA3ODoxYzBlMWI2ODI3NjA2ZDdlZmVkNzFlMjA0OTM5ZDA0OGY5NGY4NDJi
+      AUTH_USER: user
+      AUTH_PASSWORD: password
+      XAPI_USERNAME: 66f2b4fc001e3da992d23b57d8a7457655bea078
+      XAPI_PASSWORD: 1c0e1b6827606d7efed71e204939d048f94f842b
       XAPI_URL: http://learning-locker-xapi:8083/data/xAPI
-    image: cshr/lpg-learner-record:d721f6cf60bec8d21810a3d35128e416401bb668
+    image: cshr/lpg-learner-record:37b8e6e205275c3d3c049069b87f280d0204017c
     links:
       - learning-locker-xapi
     ports:
