--- a/package.json
+++ b/package.json
@@ -46,17 +46,18 @@
 		"@types/session-file-store": "1.2.0",
 		"@types/unzip": "0.1.0",
 		"@types/xml2js": "0.4.2",
-		"node-sass": "4.7.2",
+		"aws-sdk": "2.205.0",
 		"dotenv": "5.0.0",
 		"make-runnable": "1.3.6",
+		"node-sass": "4.7.2",
 		"nodemon": "1.14.12",
 		"protobufjs": "6.8.4",
 		"tslint": "5.9.1",
 		"typescript": "2.7.1"
 	},
 	"dependencies": {
-		"aws-sdk": "2.189.0",
 		"axios": "0.17.1",
+		"azure-storage": "2.8.1",
 		"compression": "1.7.1",
 		"csv": "2.0.0",
 		"dgraph-js": "1.1.1-beta.2",
