--- a/package.json
+++ b/package.json
@@ -44,12 +44,11 @@
     "@types/session-file-store": "1.2.0",
     "@types/unzip": "0.1.0",
     "@types/xml2js": "0.4.2",
-    "aws-sdk": "2.205.0",
     "make-runnable": "1.3.6",
     "node-sass": "4.7.2",
     "nodemon": "1.14.12",
     "protobufjs": "6.8.4",
-    "slugid": "^1.1.0",
+    "slugid": "1.1.0",
     "tslint": "5.9.1",
     "typescript": "2.7.1"
   },
@@ -59,7 +58,6 @@
     "compression": "1.7.1",
     "dotenv": "5.0.0",
     "express": "4.16.2",
-    "express-cache-response": "1.0.2",
     "express-fileupload": "0.4.0",
     "express-session": "1.15.6",
     "express-validator": "4.3.0",
