--- a/package.json
+++ b/package.json
@@ -1,83 +1,86 @@
 {
-  "name": "lib",
-  "version": "0.0.1",
-  "scripts": {
-    "build": "npm run compile && npm run sass:management && npm run sass:ui",
-    "clean": "./bin/setup-dist",
-    "compile": "./bin/tsc",
-    "dev:management":
-    "npm run watch & npm run watch-sass:management & npm run start:management & wait",
-    "dev:ui": "npm run watch & npm run watch-sass:ui & npm run start:ui & wait",
-    "lint": "tslint --project tsconfig.json",
-    "lint:headless": "tslint --project test/headless/tsconfig.json",
-    "nuke": "rm -rf dist node_modules",
-    "postinstall": "./bin/setup-dist",
-    "sass:all": "npm run sass:management & npm run sass:ui",
-    "sass:management":
-    "node-sass src/management-ui/assets/styles/index.scss dist/management-ui/assets/styles/main.css",
-    "sass:ui":
-    "node-sass src/ui/assets/styles/main.scss dist/ui/assets/styles/main.css",
-    "start:all": "npm run start:management & npm run start:ui",
-    "start:management":
-    "cd dist/management-ui && node --icu-data-dir=../../node_modules/full-icu ../node_modules/management-ui/server.js",
-    "start:ui":
-    "cd dist/ui && node --icu-data-dir=../../node_modules/full-icu ../node_modules/ui/server.js",
-    "watch": "./bin/tsc -w",
-    "watch-sass-nodemon": "nodemon -e scss -x \"npm run sass:all\"",
-    "watch-sass:ui":
-    "node-sass -w -r src/ui/assets/styles -o dist/ui/assets/styles",
-    "watch-sass:management":
-    "node-sass -w -r src/management-ui/assets/styles -o dist/management-ui/assets/styles"
-  },
-  "devDependencies": {
-    "@types/compression": "0.0.35",
-    "@types/dotenv": "4.0.2",
-    "@types/express-session": "1.15.6",
-    "@types/google-protobuf": "3.2.7",
-    "@types/i18n": "0.8.3",
-    "@types/lusca": "1.5.0",
-    "@types/node": "9.4.0",
-    "@types/node-fetch": "1.6.7",
-    "@types/passport": "0.4.2",
-    "@types/passport-saml": "0.15.5",
-    "@types/request": "2.47.0",
-    "@types/session-file-store": "1.2.0",
-    "@types/unzip": "0.1.0",
-    "@types/xml2js": "0.4.2",
-    "make-runnable": "1.3.6",
-    "node-sass": "4.7.2",
-    "nodemon": "1.14.12",
-    "protobufjs": "6.8.4",
-    "slugid": "1.1.0",
-    "tslint": "5.9.1",
-    "typescript": "2.7.1"
-  },
-  "dependencies": {
-    "axios": "0.17.1",
-    "azure-storage": "2.8.1",
-    "compression": "1.7.1",
-    "dotenv": "5.0.0",
-    "express": "4.16.2",
-    "express-fileupload": "0.4.0",
-    "express-session": "1.15.6",
-    "express-validator": "4.3.0",
-    "full-icu": "1.2.0",
-    "govuk-elements-sass": "3.1.2",
-    "govuk_frontend_toolkit": "7.2.0",
-    "i18n": "0.8.3",
-    "log4js": "2.5.2",
-    "lusca": "1.5.2",
-    "node-fetch": "1.7.3",
-    "notifications-node-client": "4.1.0",
-    "passport": "0.4.0",
-    "passport-saml": "0.32.1",
-    "protobufjs": "6.8.4",
-    "request": "2.83.0",
-    "request-promise": "4.2.2",
-    "serve-favicon": "2.4.5",
-    "session-file-store": "1.2.0",
-    "striptags": "3.1.1",
-    "svelte": "1.55.0",
-    "unzip": "0.1.11"
-  }
+	"name": "lib",
+	"version": "0.0.1",
+	"scripts": {
+		"build": "npm run compile && npm run sass:management && npm run sass:ui",
+		"clean": "./bin/setup-dist",
+		"compile": "./bin/tsc",
+		"dev:management":
+			"npm run watch & npm run watch-sass:management & npm run start:management & wait",
+		"dev:ui": "npm run watch & npm run watch-sass:ui & npm run start:ui & wait",
+		"lint": "tslint --project tsconfig.json",
+		"lint:headless": "tslint --project test/headless/tsconfig.json",
+		"nuke": "rm -rf dist node_modules",
+		"postinstall": "./bin/setup-dist",
+		"sass:all": "npm run sass:management & npm run sass:ui",
+		"sass:management":
+			"node-sass src/management-ui/assets/styles/index.scss dist/management-ui/assets/styles/main.css",
+		"sass:ui":
+			"node-sass src/ui/assets/styles/main.scss dist/ui/assets/styles/main.css",
+		"start:all": "npm run start:management & npm run start:ui",
+		"start:management":
+			"cd dist/management-ui && node --icu-data-dir=../../node_modules/full-icu ../node_modules/management-ui/server.js",
+		"start:ui":
+			"cd dist/ui && node --icu-data-dir=../../node_modules/full-icu ../node_modules/ui/server.js",
+		"test": "NODE_ICU_DATA=node_modules/full-icu jest",
+		"watch": "./bin/tsc -w",
+		"watch-sass-nodemon": "nodemon -e scss -x \"npm run sass:all\"",
+		"watch-sass:ui":
+			"node-sass -w -r src/ui/assets/styles -o dist/ui/assets/styles",
+		"watch-sass:management":
+			"node-sass -w -r src/management-ui/assets/styles -o dist/management-ui/assets/styles"
+	},
+	"devDependencies": {
+		"@types/compression": "0.0.35",
+		"@types/dotenv": "4.0.2",
+		"@types/express-session": "1.15.6",
+		"@types/google-protobuf": "3.2.7",
+		"@types/i18n": "0.8.3",
+		"@types/jest": "22.2.0",
+		"@types/lusca": "1.5.0",
+		"@types/node": "9.4.0",
+		"@types/node-fetch": "1.6.7",
+		"@types/passport": "0.4.2",
+		"@types/passport-saml": "0.15.5",
+		"@types/request": "2.47.0",
+		"@types/session-file-store": "1.2.0",
+		"@types/unzip": "0.1.0",
+		"@types/xml2js": "0.4.2",
+		"make-runnable": "1.3.6",
+		"node-sass": "4.7.2",
+		"nodemon": "1.14.12",
+		"protobufjs": "6.8.4",
+		"slugid": "1.1.0",
+		"tslint": "5.9.1",
+		"typescript": "2.7.1"
+	},
+	"dependencies": {
+		"axios": "0.17.1",
+		"azure-storage": "2.8.1",
+		"compression": "1.7.1",
+		"dotenv": "5.0.0",
+		"express": "4.16.2",
+		"express-fileupload": "0.4.0",
+		"express-session": "1.15.6",
+		"express-validator": "4.3.0",
+		"full-icu": "1.2.0",
+		"govuk-elements-sass": "3.1.2",
+		"govuk_frontend_toolkit": "7.2.0",
+		"i18n": "0.8.3",
+		"jest-cli": "22.4.2",
+		"log4js": "2.5.2",
+		"lusca": "1.5.2",
+		"node-fetch": "1.7.3",
+		"notifications-node-client": "4.1.0",
+		"passport": "0.4.0",
+		"passport-saml": "0.32.1",
+		"protobufjs": "6.8.4",
+		"request": "2.83.0",
+		"request-promise": "4.2.2",
+		"serve-favicon": "2.4.5",
+		"session-file-store": "1.2.0",
+		"striptags": "3.1.1",
+		"svelte": "1.55.0",
+		"unzip": "0.1.11"
+	}
 }
