--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
 		"noImplicitAny": true,
 		"noImplicitThis": true,
 		"noUnusedLocals": true,
-		"outDir": "./dist/node_modules",
+		"outDir": "./dist/build",
 		"paths": {
 			"lib/*": ["src/lib/*"]
 		},
