--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
 		"@types/session-file-store": "1.2.0",
 		"@types/unzip": "0.1.0",
 		"@types/xml2js": "0.4.2",
+		"csv": "^2.0.0",
 		"make-runnable": "1.3.6",
+		"mime-types": "^2.1.18",
 		"node-sass": "4.7.2",
 		"nodemon": "1.14.12",
 		"protobufjs": "6.8.4",
