--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "lib",
 	"version": "0.0.1",
 	"scripts": {
-		"build": "npm run compile && npm run sass:management && npm run sass:ui",
+		"build": "npm run sass:management && npm run sass:ui && npm run compile",
 		"clean": "./bin/setup-dist",
 		"compile": "./bin/tsc",
 		"dev:management":
@@ -60,6 +60,7 @@
 		"axios": "0.17.1",
 		"azure-storage": "2.8.1",
 		"compression": "1.7.1",
+		"cors": "^2.8.4",
 		"dotenv": "5.0.0",
 		"express": "4.16.2",
 		"express-async-handler": "1.1.1",
