--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
 		"axios": "0.17.1",
 		"azure-storage": "2.8.1",
 		"compression": "1.7.1",
-		"cors": "^2.8.4",
+		"cors": "2.8.4",
 		"dotenv": "5.0.0",
 		"express": "4.16.2",
 		"express-async-handler": "1.1.1",
