--- a/package.json
+++ b/package.json
@@ -46,9 +46,8 @@
 		"@types/session-file-store": "1.2.0",
 		"@types/unzip": "0.1.0",
 		"@types/xml2js": "0.4.2",
-		"csv": "^2.0.0",
+		"csv": "2.0.0",
 		"make-runnable": "1.3.6",
-		"mime-types": "^2.1.18",
 		"node-sass": "4.7.2",
 		"nodemon": "1.14.12",
 		"protobufjs": "6.8.4",
@@ -74,6 +73,7 @@
 		"jest-cli": "22.4.2",
 		"log4js": "2.5.2",
 		"lusca": "1.5.2",
+		"mime-types": "2.1.18",
 		"node-fetch": "1.7.3",
 		"notifications-node-client": "4.1.0",
 		"passport": "0.4.0",
