--- a/package.json
+++ b/package.json
@@ -5,23 +5,30 @@
 		"build": "npm run compile && npm run sass:management && npm run sass:ui",
 		"clean": "./bin/setup-dist",
 		"compile": "./bin/tsc",
-		"dev:management": "npm run watch & npm run watch-sass:management & npm run start:management & wait",
+		"dev:management":
+			"npm run watch & npm run watch-sass:management & npm run start:management & wait",
 		"dev:ui": "npm run watch & npm run watch-sass:ui & npm run start:ui & wait",
 		"lint": "tslint --project tsconfig.json",
 		"lint:headless": "tslint --project test/headless/tsconfig.json",
 		"nuke": "rm -rf dist node_modules",
 		"postinstall": "./bin/setup-dist",
 		"sass:all": "npm run sass:management & npm run sass:ui",
-		"sass:management": "node-sass src/management-ui/assets/styles/index.scss dist/management-ui/assets/styles/main.css",
-		"sass:ui": "node-sass src/ui/assets/styles/main.scss dist/ui/assets/styles/main.css",
+		"sass:management":
+			"node-sass src/management-ui/assets/styles/index.scss dist/management-ui/assets/styles/main.css",
+		"sass:ui":
+			"node-sass src/ui/assets/styles/main.scss dist/ui/assets/styles/main.css",
 		"start:all": "npm run start:management & npm run start:ui",
-		"start:management": "cd dist/management-ui && node --icu-data-dir=../../node_modules/full-icu ../node_modules/management-ui/server.js",
-		"start:ui": "cd dist/ui && node --icu-data-dir=../../node_modules/full-icu ../node_modules/ui/server.js",
+		"start:management":
+			"cd dist/management-ui && node --icu-data-dir=../../node_modules/full-icu ../node_modules/management-ui/server.js",
+		"start:ui":
+			"cd dist/ui && node --icu-data-dir=../../node_modules/full-icu ../node_modules/ui/server.js",
 		"test": "NODE_ICU_DATA=node_modules/full-icu jest",
 		"watch": "./bin/tsc -w",
 		"watch-sass-nodemon": "nodemon -e scss -x \"npm run sass:all\"",
-		"watch-sass:ui": "node-sass -w -r src/ui/assets/styles -o dist/ui/assets/styles",
-		"watch-sass:management": "node-sass -w -r src/management-ui/assets/styles -o dist/management-ui/assets/styles"
+		"watch-sass:ui":
+			"node-sass -w -r src/ui/assets/styles -o dist/ui/assets/styles",
+		"watch-sass:management":
+			"node-sass -w -r src/management-ui/assets/styles -o dist/management-ui/assets/styles"
 	},
 	"devDependencies": {
 		"@types/compression": "0.0.35",
@@ -53,6 +60,7 @@
 		"compression": "1.7.1",
 		"dotenv": "5.0.0",
 		"express": "4.16.2",
+		"express-async-handler": "1.1.1",
 		"express-fileupload": "0.4.0",
 		"express-session": "1.15.6",
 		"express-validator": "4.3.0",
