--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -69,14 +69,12 @@ services:
     image: redis@sha256:3446883dfe13ab3db67433aace0e72d8cd669c528e60c617c42d6c697f0fa41f
 
   setup-learning-locker:
-    command: ["/opt/learning-locker/./node_modules/.bin/babel-node", "/opt/learning-locker/mkadmin.js"]
     depends_on:
       - mailhog
       - mongodb
     environment:
       - NODE_PATH=/opt/learning-locker/setup
-    image: cshr/lpg-learning-locker:d29392f370a186af9d9338fbe796e7d60c32fcd91bf23824c0fd86b6237fcd96
-    working_dir: /opt/learning-locker/setup
+    image: cshr/lpg-learning-locker-setup:latest
 # /Learning Locker
 
 # CSHR
