--- a/environ/learning-locker-setup/Dockerfile
+++ b/environ/learning-locker-setup/Dockerfile
@@ -1,5 +1,5 @@
 FROM cshr/lpg-learning-locker:d29392f370a186af9d9338fbe796e7d60c32fcd91bf23824c0fd86b6237fcd96
 
-WORKDIR /opt/learning-locker/setup
+WORKDIR /opt/learning-locker
 
 CMD ["/opt/learning-locker/./node_modules/.bin/babel-node", "/opt/learning-locker/mkadmin.js"]
