environ/learning-locker: make it work on azure

--- a/environ/learning-locker/Dockerfile
+++ b/environ/learning-locker/Dockerfile
@@ -31,12 +31,17 @@ RUN cd /opt/xapi-service && \
     npm install && \
     npm run build
 
+COPY redis.patch /opt/xapi-service/
+RUN cd /opt/xapi-service && patch -p0 < redis.patch
+
 COPY mkadmin.js /opt/learning-locker/
+COPY run-ui.sh /opt/learning-locker/
+RUN chmod +x /opt/learning-locker/run-ui.sh
 
 ADD https://github.com/Civil-Service-Human-Resources/lpg-terraform-paas/releases/download/hammer-0.1/hammer /bin/hammer
 RUN chmod +x /bin/hammer && echo "Hammer v0.1 Added"
 
-ENV API_HOST=learning-locker-api-server \
+ENV API_HOST=localhost \
     API_PORT=8082 \
     APP_SECRET=51e6383e666c54f02ed1502df191e06a3cb53bdde94b2c7b580aa077bcf81c2f \
     EXPRESS_PORT=8083 \
