--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 			"cd dist/management-ui && node --icu-data-dir=../../node_modules/full-icu ../node_modules/management-ui/server.js",
 		"start:ui":
 			"cd dist/ui && node --icu-data-dir=../../node_modules/full-icu ../node_modules/ui/server.js",
-		"test": "NODE_ICU_DATA=node_modules/full-icu jest",
+		"test":
+			"NODE_ICU_DATA=node_modules/full-icu ./node_modules/.bin/jasmine-node dist/build/**/*.spec.js",
 		"watch": "./bin/tsc -w",
 		"watch-sass-nodemon": "nodemon -e scss -x \"npm run sass:all\"",
 		"watch-sass:ui":
@@ -39,7 +40,7 @@
 		"@types/express-session": "1.15.6",
 		"@types/google-protobuf": "3.2.7",
 		"@types/i18n": "0.8.3",
-		"@types/jest": "22.2.0",
+		"@types/jasmine": "2.8.6",
 		"@types/lusca": "1.5.0",
 		"@types/mime-types": "^2.1.0",
 		"@types/node": "9.4.0",
@@ -77,6 +78,7 @@
 		"govuk-elements-sass": "3.1.2",
 		"govuk_frontend_toolkit": "7.2.0",
 		"i18n": "0.8.3",
+		"jasmine-node": "1.14.5",
 		"jest-cli": "22.4.2",
 		"log4js": "2.5.2",
 		"lusca": "1.5.2",
@@ -85,7 +87,6 @@
 		"notifications-node-client": "4.1.0",
 		"passport": "0.4.0",
 		"passport-saml": "0.32.1",
-		"protobufjs": "6.8.4",
 		"request": "2.83.0",
 		"request-promise": "4.2.2",
 		"serve-favicon": "2.4.5",
