--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,13 @@ node_js:
 services:
   - docker
 
+addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
+      
 cache:
   directories:
     - environ/lpg-ansible-mvp
