--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 		"build": "npm run sass:management && npm run sass:ui && npm run compile",
 		"clean": "./bin/setup-dist",
 		"compile": "./bin/tsc",
-		"dev:management": "npm run watch & npm run watch-sass:management & npm run start:management & wait",
+		"dev:management":
+			"npm run watch & npm run watch-sass:management & npm run start:management & wait",
 		"dev:ui": "npm run watch & npm run watch-sass:ui & npm run start:ui & wait",
 		"lint": "tslint --project tsconfig.json",
 		"lint:headless": "tslint --project test/headless/tsconfig.json",
@@ -13,16 +14,23 @@
 		"nuke": "rm -rf dist node_modules",
 		"postinstall": "./bin/setup-dist",
 		"sass:all": "npm run sass:management & npm run sass:ui",
-		"sass:management": "node-sass src/management-ui/assets/styles/index.scss dist/management-ui/assets/styles/main.css",
-		"sass:ui": "node-sass src/ui/assets/styles/main.scss dist/ui/assets/styles/main.css",
+		"sass:management":
+			"node-sass src/management-ui/assets/styles/index.scss dist/management-ui/assets/styles/main.css",
+		"sass:ui":
+			"node-sass src/ui/assets/styles/main.scss dist/ui/assets/styles/main.css",
 		"start:all": "npm run start:management & npm run start:ui",
-		"start:management": "cd dist/management-ui && node --icu-data-dir=../../node_modules/full-icu ../node_modules/management-ui/server.js",
-		"start:ui": "cd dist/ui && node --icu-data-dir=../../node_modules/full-icu ../node_modules/ui/server.js",
-		"test": "NODE_ICU_DATA=node_modules/full-icu ./node_modules/.bin/jasmine-node dist/build/**/*.spec.js",
+		"start:management":
+			"cd dist/management-ui && node --icu-data-dir=../../node_modules/full-icu ../node_modules/management-ui/server.js",
+		"start:ui":
+			"cd dist/ui && node --icu-data-dir=../../node_modules/full-icu ../node_modules/ui/server.js",
+		"test":
+			"NODE_ICU_DATA=node_modules/full-icu ./node_modules/.bin/jasmine-node dist/build/**/*.spec.js",
 		"watch": "./bin/tsc -w",
 		"watch-sass-nodemon": "nodemon -e scss -x \"npm run sass:all\"",
-		"watch-sass:ui": "node-sass -w -r src/ui/assets/styles -o dist/ui/assets/styles",
-		"watch-sass:management": "node-sass -w -r src/management-ui/assets/styles -o dist/management-ui/assets/styles"
+		"watch-sass:ui":
+			"node-sass -w -r src/ui/assets/styles -o dist/ui/assets/styles",
+		"watch-sass:management":
+			"node-sass -w -r src/management-ui/assets/styles -o dist/management-ui/assets/styles"
 	},
 	"devDependencies": {
 		"@types/compression": "0.0.35",
@@ -31,6 +39,7 @@
 		"@types/dotenv": "4.0.2",
 		"@types/express-session": "1.15.6",
 		"@types/google-protobuf": "3.2.7",
+		"@types/helmet": "0.0.37",
 		"@types/i18n": "0.8.3",
 		"@types/jasmine": "2.8.6",
 		"@types/lusca": "1.5.0",
@@ -51,14 +60,14 @@
 		"nodemon": "1.14.12",
 		"protobufjs": "6.8.4",
 		"slugid": "1.1.0",
-		"tslint": "^5.9.1",
+		"tslint": "5.9.1",
 		"typescript": "2.7.1"
 	},
 	"dependencies": {
 		"axios": "0.17.1",
 		"azure-storage": "2.8.1",
 		"compression": "1.7.1",
-		"connect-flash": "^0.1.1",
+		"connect-flash": "0.1.1",
 		"cors": "2.8.4",
 		"dotenv": "5.0.0",
 		"express": "4.16.2",
@@ -69,6 +78,7 @@
 		"full-icu": "1.2.0",
 		"govuk-elements-sass": "3.1.2",
 		"govuk_frontend_toolkit": "7.2.0",
+		"helmet": "3.12.0",
 		"i18n": "0.8.3",
 		"jasmine-node": "1.14.5",
 		"log4js": "2.5.2",
