--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
 		"@types/xml2js": "0.4.2",
 		"csv": "2.0.0",
 		"make-runnable": "1.3.6",
-		"node-sass": "4.7.2",
 		"nodemon": "1.14.12",
 		"protobufjs": "6.8.4",
 		"slugid": "1.1.0",
@@ -81,6 +80,7 @@
 		"lusca": "1.5.2",
 		"mime-types": "2.1.18",
 		"node-fetch": "1.7.3",
+		"node-sass": "^4.9.0",
 		"notifications-node-client": "4.1.0",
 		"passport": "0.4.0",
 		"passport-oauth2": "1.4.0",
