--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
 		"@types/node": "9.4.0",
 		"@types/node-fetch": "1.6.7",
 		"@types/passport": "0.4.2",
-		"@types/passport-saml": "0.15.5",
 		"@types/request": "2.47.0",
 		"@types/session-file-store": "1.2.0",
 		"@types/shortid": "0.0.29",
@@ -48,15 +47,16 @@
 		"@types/xml2js": "0.4.2",
 		"csv": "2.0.0",
 		"make-runnable": "1.3.6",
-		"node-sass": "4.7.2",
 		"nodemon": "1.14.12",
 		"protobufjs": "6.8.4",
 		"slugid": "1.1.0",
+		"traverson-hal": "6.0.0",
 		"tslint": "5.9.1",
 		"typescript": "2.7.1"
 	},
 	"dependencies": {
 		"@types/express-validator": "3.0.0",
+		"@types/traverson": "2.0.28",
 		"axios": "0.17.1",
 		"azure-storage": "2.8.1",
 		"compression": "1.7.1",
@@ -79,8 +79,10 @@
 		"lusca": "1.5.2",
 		"mime-types": "2.1.18",
 		"node-fetch": "1.7.3",
+		"node-sass": "4.9.0",
 		"notifications-node-client": "4.1.0",
 		"passport": "0.4.0",
+		"passport-oauth2": "1.4.0",
 		"passport-saml": "0.32.1",
 		"protobufjs": "6.8.4",
 		"request": "2.83.0",
@@ -91,6 +93,7 @@
 		"striptags": "3.1.1",
 		"svelte": "1.55.0",
 		"tmp": "0.0.33",
+		"traverson-hal": "6.0.0",
 		"unzip": "0.1.11"
 	}
 }
