--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
 		"nodemon": "1.14.12",
 		"protobufjs": "6.8.4",
 		"slugid": "1.1.0",
-		"traverson": "^6.0.1",
+		"traverson": "6.0.1",
 		"traverson-hal": "6.0.0",
 		"tslint": "5.9.1",
 		"typescript": "2.7.1"
@@ -104,7 +104,7 @@
 		"striptags": "3.1.1",
 		"svelte": "1.55.0",
 		"tmp": "0.0.33",
-		"traverson": "^6.0.3",
+		"traverson": "6.0.3",
 		"traverson-hal": "6.0.0",
 		"unzip": "0.1.11"
 	}
