--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
 		"session-file-store": "1.2.0",
 		"shortid": "2.2.8",
 		"striptags": "3.1.1",
-		"svelte": "^2.6.3",
+		"svelte": "2.6.3",
 		"tmp": "0.0.33",
 		"traverson": "6.0.3",
 		"traverson-hal": "6.0.0",
