--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -62,7 +62,7 @@ services:
     container_name: identity
     environment:
       - SPRING_PROFILES_ACTIVE=default
-    image: cshr/identity-service:local-1
+    image: cshr/identity-service:dca9c7daf9c8e7b335ad9f6beae7ea173b1b65fd
     ports:
       - 8080:8080
       - 8081:8081
@@ -72,8 +72,8 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=default
       - CHECK_TOKEN_URL=http://identity:8080/oauth/check_token
-    image: cshr/civil-servant-registry-service:f0199521cc315fed7ffdc22921b13a00930ef264
-    links:
+    image: cshr/civil-servant-registry-service:cf907a267f0936cd9aea45042bbe6a8a1a27d4f8
+    depends_on:
       - identity
     ports:
       - 9002:9002
@@ -81,13 +81,19 @@ services:
   learner-record:
     container_name: learner-record
     environment:
-      AUTH_USER: user
-      AUTH_PASSWORD: password
+      OAUTH_SERVICE_URL: http://identity:8080
+      REGISTRY_SERVICE_URL: http://civil-servant-registry:9002
+      LEARNING_CATALOGUE_SERVICE_URL: http://learning-catalogue:9001
+      LEARNING_CATALOGUE_SERVICE_USER: user
+      LEARNING_CATALOGUE_SERVICE_PASS: password
       XAPI_USERNAME: 66f2b4fc001e3da992d23b57d8a7457655bea078
       XAPI_PASSWORD: 1c0e1b6827606d7efed71e204939d048f94f842b
       XAPI_URL: http://learning-locker-xapi:8083/data/xAPI
-    image: cshr/lpg-learner-record:0a44bda01502cfa1cfc603a79b99da2620830d58
+    image: cshr/lpg-learner-record:621678ce3d703440f86218cbd075c9b5b2cb9492
     depends_on:
+      - civil-servant-registry
+      - identity
+      - learning-catalogue
       - learning-locker-xapi
     ports:
       - 9000:9000
@@ -106,5 +112,17 @@ services:
     image: cshr/lpg-learning-catalogue:222b2025e3c8f3ec2ad29b65304edc0f2a5a642d
     ports:
       - 9001:9001
+
+#  report-service:
+#    container_name: report-service
+#    environment:
+#      OAUTH_SERVICE_URL: http://identity:8080
+#      LEARNER_RECORD_URL: http://learner-record:9000
+#    image: cshr/report-service:95d6bc36ffb26ee11d796c75b093b3b0684f8c2d
+#    depends_on:
+#      - identity
+#      - learner-record
+#    ports:
+#      - 9004:9004
 
 # /CSHR
