--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -71,8 +71,8 @@ services:
     container_name: civil-servant-registry
     environment:
       - SPRING_PROFILES_ACTIVE=default
-      - CHECK_TOKEN_URL=http://identity:8080/oauth/check_token
-    image: cshr/civil-servant-registry-service:9fe7cd23d21b7428786e14f6a8c3a548b6a7211f
+      - OAUTH_SERVICE_URL=http://identity:8080
+    image: cshr/civil-servant-registry-service:1b27ad13816515e8f7cbc0e71bc960b4b0ff8c83
     depends_on:
       - identity
     ports:
@@ -84,12 +84,8 @@ services:
       OAUTH_SERVICE_URL: http://identity:8080
       REGISTRY_SERVICE_URL: http://civil-servant-registry:9002
       LEARNING_CATALOGUE_SERVICE_URL: http://learning-catalogue:9001
-      LEARNING_CATALOGUE_SERVICE_USER: user
-      LEARNING_CATALOGUE_SERVICE_PASS: password
-      XAPI_USERNAME: 66f2b4fc001e3da992d23b57d8a7457655bea078
-      XAPI_PASSWORD: 1c0e1b6827606d7efed71e204939d048f94f842b
       XAPI_URL: http://learning-locker-xapi:8083/data/xAPI
-    image: cshr/lpg-learner-record:16f051249ed55589c684611913521c6d07477bb8
+    image: cshr/lpg-learner-record:c9baf7c8cca6484d9a195c7fb33bbb5bc53a72d0
     depends_on:
       - civil-servant-registry
       - identity
@@ -101,15 +97,11 @@ services:
   learning-catalogue:
     container_name: learning-catalogue
     command: ["./wait-for-it.sh", "elasticsearch:9300", "-t", "200", "--", "java", "-jar", "/data/app.jar"]
+    environment:
+      ELASTICSEARCH_URI: http://elasticsearch:9200
     depends_on:
       - elasticsearch
-    environment:
-      AUTH_USER: user
-      AUTH_PASSWORD: password
-      ELASTICSEARCH_URI: http://elasticsearch:9200
-      ELASTICSEARCH_USERNAME: elastic
-      ELASTICSEARCH_PASSWORD: changeme
-    image: cshr/lpg-learning-catalogue:781d5e92df2238fc184e1276e079b9833f67017b
+    image: cshr/lpg-learning-catalogue:8bfe9d8df2dc89dbc16ec0840035c0a4d2bdf5ae
     ports:
       - 9001:9001
 
