--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 	},
 	"dependencies": {
 		"@types/express-validator": "3.0.0",
+		"@types/lodash": "^4.14.110",
 		"@types/traverson": "2.0.28",
 		"axios": "0.17.1",
 		"azure-storage": "2.8.1",
